[package]
name = "token-flow-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
hypersync-client = "0.19.0"
parking_lot = "0.12.5"
alloy-primitives = { version = "0.7", default-features = false, features = ["std"] }
